# aws-cfn-mongodb-atlas-awsiamdatabaseuser

./: .gitignore  .pre-commit-config.yaml  .rpdk-config  Makefile  mongodb-atlas-awsiamdatabaseuser.json  pyproject.toml  requirements.txt  template.yml
docs/: README.md  apikeydefinition.md  databaseaccess.md  databaseaccessdefinition.md  scopes.md
src/mongodb_atlas_awsiamdatabaseuser/: handlers.py  models.py  user_mgmt.py
