[tool.poetry]
name = "mongodb_atlas_awsiamdatabaseuser"
version = "0.1.0"
description = "AWS CFN Resource to provision a MongoDB Atlas user using IAM Authentication into an Atlas Project"
authors = ["John Preston <john@ews-network.net>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
cloudformation-cli-python-lib = "^2.1.9"
compose-x-common = "^0.4.2"
mongodb-atlas-api-sdk = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
cloudformation-cli = "^0.2.23"
cloudformation-cli-python-plugin = "^2.1.5"
pyclean = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
